<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lyricue</string>
    <string name="prevsong">Prev Song</string>
    <string name="prevpage">Prev Page</string>
    <string name="blank">Blank</string>
    <string name="redisplay">Reshow page</string>
    <string name="nextpage">Next Page</string>
    <string name="nextsong">Next Song</string>
    <string name="apply">Apply</string>
    <string name="control">Control</string>
    <string name="settings">Settings</string>
    <string name="refresh_playlist">Refresh Playlist</string>
    <string name="toggle_previews">Toggle Previews</string>
    <string name="refresh_songlist">Refresh Songlist</string>
    <string name="select_playlist">Select Playlist</string>
    <string name="playlist">Playlist</string>
    <string name="bible">Bible</string>
    <string name="bible_version">Bible Translation</string>
    <string name="selectbible">Select Bible</string>
    <string name="available">Available Songs</string>
    <string name="lyricue">Lyricue</string>
    <string name="selectbook">Select Book</string>
    <string name="selectchapter">Select Chapter</string>
    <string name="selectversestart">Start</string>
    <string name="selectverseend">End</string>
    <string-array name="bible_books">
        <item>Genesis</item>
        <item>Exodus</item>
        <item>Leviticus</item>
        <item>Numbers</item>
        <item>Deuteronomy</item>
        <item>Joshua</item>
        <item>Judges</item>
        <item>Ruth</item>
        <item>1 Samuel</item>
        <item>2 Samuel</item>
        <item>1 Kings</item>
        <item>2 Kings</item>
        <item>1 Chronicles</item>
        <item>2 Chronicles</item>
        <item>Ezra</item>
        <item>Nehemiah</item>
        <item>Esther</item>
        <item>Job</item>
        <item>Psalms</item>
        <item>Proverbs</item>
        <item>Ecclesiastes</item>
        <item>Song of Songs</item>
        <item>Isaiah</item>
        <item>Jeremiah</item>
        <item>Lamentations</item>
        <item>Ezekiel</item>
        <item>Daniel</item>
        <item>Hosea</item>
        <item>Joel</item>
        <item>Amos</item>
        <item>Obadiah</item>
        <item>Jonah</item>
        <item>Micah</item>
        <item>Nahum</item>
        <item>Habakkuk</item>
        <item>Zephaniah</item>
        <item>Haggai</item>
        <item>Zechariah</item>
        <item>Malachi</item>
        <item>Matthew</item>
        <item>Mark</item>
        <item>Luke</item>
        <item>John</item>
        <item>Acts</item>
        <item>Romans</item>
        <item>1 Corinthians</item>
        <item>2 Corinthians</item>
        <item>Galatians</item>
        <item>Ephesians</item>
        <item>Philippians</item>
        <item>Colossians</item>
        <item>1 Thessalonians</item>
        <item>2 Thessalonians</item>
        <item>1 Timothy</item>
        <item>2 Timothy</item>
        <item>Titus</item>
        <item>Philemon</item>
        <item>Hebrews</item>
        <item>James</item>
        <item>1 Peter</item>
        <item>2 Peter</item>
        <item>1 John</item>
        <item>2 John</item>
        <item>3 John</item>
        <item>Jude</item>
        <item>Revelation</item>
    </string-array>
    <string name="add_verse_to_playlist">Add verse to playlist</string>
    <string name="book">Book</string>
    <string name="chapter">Chapter</string>
    <string name="verses">Verses</string>
    <string name="display">Display</string>
    <string name="osd">OSD</string>
    <string name="quicktext">Type text to display on screen here</string>
    <string name="welcome">Thank you for running Lyricue Frontend for Android.\n\n
In order to run I need know which profile you wish to use\n\n
Please Enter the Profile to use.</string>
    <string name="demo">Demo Mode</string>
    <string name="snapshot">Snapshot</string>
    <string name="dash">-</string>
    <string name="show">Show</string>
    <string name="prevverses">Previously Shown Verses</string>
    <string name="prevverse">Previous Verse</string>
    <string name="nextverse">Next Verse</string>
    <string name="changeprofile">Change Profile</string>
    <string name="exit">Exit</string>
    <string name="up">Up</string>
    <string name="search_songs">Search Available songs</string>
    <string name="server">Start Local Display Server</string>
    <string name="headertext">Header Text</string>
    <string name="maintext">Main Text</string>
    <string name="footertext">Footer Text</string>
    <string name="background">Background</string>
    
</resources>