<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/lyricue_header" android:contentDescription="@string/lyricue"/>

    <TextView
        android:id="@+id/textViewDash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceMedium" android:gravity="center"/>

    <EditText
        android:id="@+id/editHostname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewDash"
        android:ems="10"
        android:gravity="center" 
        android:singleLine="true" android:inputType="textNoSuggestions">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonInitialApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="onClickSetup"
        android:text="@string/apply" />

    <Button
        android:id="@+id/buttonInitialDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonInitialApply"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="onClickSetup"
        android:text="@string/demo" />

</RelativeLayout>