<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
    <com.viewpagerindicator.TabPageIndicator
		android:id="@+id/indicator" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_alignParentTop="true"
		android:background="#18FFFF00" android:textColor="#AA00FFFF"
		app:footerColor="#FFAA2222" app:footerLineHeight="1dp"
		app:footerIndicatorHeight="3dp" app:footerIndicatorStyle="underline"
		app:selectedColor="#FFFFFFFF" app:selectedBold="true" />
	<android.support.v4.view.ViewPager
		android:id="@+id/viewpager" android:layout_width="fill_parent"
		android:layout_above="@+id/hline1" android:layout_below="@+id/indicator"
		android:layout_height="0dp" />
    <View 
        android:id="@+id/hline1"
        android:background="#FF33B5E5"
        android:layout_width = "fill_parent"
        android:layout_height="1dip"
        android:layout_centerVertical ="true"
        android:layout_above="@+id/quickBar"/>
    <LinearLayout
        android:id="@+id/quickBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        

        <ImageButton
            android:id="@+id/ButtonQuickPP"
            android:contentDescription="@string/prevpage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#FF000000"
            android:onClick="onClickControl"
            android:textColor="#ffffffff"
            android:clickable="true" 
            android:src="@android:drawable/ic_media_rew"/>

        <ImageButton
            android:id="@+id/ButtonQuickNP"
                        android:contentDescription="@string/nextpage"
            
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#FF000000"
            android:src="@android:drawable/ic_media_ff"
            android:onClick="onClickControl"
            android:textColor="#ffffffff" />

        <ImageButton
            android:id="@+id/ButtonQuickPS"
                        android:contentDescription="@string/prevsong"
            
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#FF000000"
            android:src="@android:drawable/ic_media_previous"
            android:onClick="onClickControl"
            android:textColor="#ffffffff" />
        
        <ImageButton
            android:id="@+id/ButtonQuickNS"
            android:contentDescription="@string/nextsong"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#FF000000"
            android:src="@android:drawable/ic_media_next"
            android:onClick="onClickControl"
            android:textColor="#ffffffff" />

        <ImageButton
            android:id="@+id/ButtonQuickBL"
            android:contentDescription="@string/blank"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#FF000000"
            android:src="@android:drawable/ic_media_pause"
            android:onClick="onClickControl"
            android:textColor="#ffffffff" />
        
        <ImageButton
            android:id="@+id/ButtonQuickRS"
            android:contentDescription="@string/redisplay"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#FF000000"
            android:src="@android:drawable/ic_media_play"
            android:onClick="onClickControl"
            android:textColor="#ffffffff" />
        

    </LinearLayout>

</RelativeLayout>